y.output
   0  $accept : program $end

   1  program : pStateDeclSeq

   2  pStateDeclSeq :
   3                | statement ';' pStateDeclSeq
   4                | "var" idlist ':' type ';' pStateDeclSeq

   5  idlist : Ident
   6         | Ident ',' idlist

   7  type : "int"
   8       | "real"
   9       | "boolean"
  10       | "record" field_list "end" "record"

  11  field_list : idlist ':' type
  12             | idlist ':' type ';' field_list

  13  state_decls :
  14              | statement ';' pStateDeclSeq
  15              | declaration ';' pStateDeclSeq

  16  declaration : "var" idlist ':' type
  17              | "bind" idlist "to" ref
  18              | "bind" "var" idlist "to" ref

  19  statement : ref ":=" expr
  20            | "assert" bool expr
  21            | "begin" state decls "end"
  22            | "loop" state_decls "end" "loop"
  23            | "exit"
  24            | "exit" "when" bool expr
  25            | "if" bool expr "then" state decls end_if

  26  ref : Ident
  27      | Ident '.' Ident

  28  end_if : "end" "if"
  29         | "else" state decls "end" "if"
  30         | "elsif" bool expr "then" state decls end_if

  31  expr : expr "or" and_expr
  32       | and_expr

  33  and_expr : and_expr "and" not_expr
  34           | not_expr

  35  not_expr : "not" not_expr
  36           | rel_expr

  37  rel_expr : sum
  38           | rel_expr '=' sum
  39           | rel_expr "not=" sum
  40           | rel_expr '<' sum
  41           | rel_expr "<=" sum
  42           | rel_expr '>' sum
  43           | rel_expr ">=" sum

  44  sum : prod
  45      | sum '+' prod
  46      | sum '-' prod

  47  prod : factor
  48       | prod '*' factor
  49       | prod '/' factor
  50       | prod "div" factor
  51       | prod "mod" factor

  52  factor : '+' basic
  53         | '-' basic
  54         | basic

  55  basic : ref
  56        | '(' expr ')'
  57        | IntConst
  58        | RealConst

state 0
	$accept : . program $end  (0)
	pStateDeclSeq : .  (2)

	Ident  shift 1
	"var"  shift 2
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	$end  reduce 2

	program  goto 8
	pStateDeclSeq  goto 9
	statement  goto 10
	ref  goto 11


state 1
	ref : Ident .  (26)
	ref : Ident . '.' Ident  (27)

	'.'  shift 12
	'-'  reduce 26
	'+'  reduce 26
	'*'  reduce 26
	'/'  reduce 26
	"not="  reduce 26
	';'  reduce 26
	":="  reduce 26
	"then"  reduce 26
	"or"  reduce 26
	"and"  reduce 26
	'='  reduce 26
	'<'  reduce 26
	"<="  reduce 26
	'>'  reduce 26
	">="  reduce 26
	"div"  reduce 26
	"mod"  reduce 26
	')'  reduce 26


state 2
	pStateDeclSeq : "var" . idlist ':' type ';' pStateDeclSeq  (4)

	Ident  shift 13
	.  error

	idlist  goto 14


state 3
	statement : "assert" . bool expr  (20)

	bool  shift 15
	.  error


state 4
	statement : "begin" . state decls "end"  (21)

	state  shift 16
	.  error


state 5
	statement : "loop" . state_decls "end" "loop"  (22)
	state_decls : .  (13)

	Ident  shift 1
	"var"  shift 17
	"bind"  shift 18
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	"end"  reduce 13

	statement  goto 19
	state_decls  goto 20
	declaration  goto 21
	ref  goto 11


state 6
	statement : "exit" .  (23)
	statement : "exit" . "when" bool expr  (24)

	"when"  shift 22
	';'  reduce 23


state 7
	statement : "if" . bool expr "then" state decls end_if  (25)

	bool  shift 23
	.  error


state 8
	$accept : program . $end  (0)

	$end  accept


state 9
	program : pStateDeclSeq .  (1)

	.  reduce 1


state 10
	pStateDeclSeq : statement . ';' pStateDeclSeq  (3)

	';'  shift 24
	.  error


state 11
	statement : ref . ":=" expr  (19)

	":="  shift 25
	.  error


state 12
	ref : Ident '.' . Ident  (27)

	Ident  shift 26
	.  error


state 13
	idlist : Ident .  (5)
	idlist : Ident . ',' idlist  (6)

	','  shift 27
	':'  reduce 5
	"to"  reduce 5


state 14
	pStateDeclSeq : "var" idlist . ':' type ';' pStateDeclSeq  (4)

	':'  shift 28
	.  error


state 15
	statement : "assert" bool . expr  (20)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 36
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 16
	statement : "begin" state . decls "end"  (21)

	decls  shift 44
	.  error


state 17
	declaration : "var" . idlist ':' type  (16)

	Ident  shift 13
	.  error

	idlist  goto 45


state 18
	declaration : "bind" . idlist "to" ref  (17)
	declaration : "bind" . "var" idlist "to" ref  (18)

	Ident  shift 13
	"var"  shift 46
	.  error

	idlist  goto 47


state 19
	state_decls : statement . ';' pStateDeclSeq  (14)

	';'  shift 48
	.  error


state 20
	statement : "loop" state_decls . "end" "loop"  (22)

	"end"  shift 49
	.  error


state 21
	state_decls : declaration . ';' pStateDeclSeq  (15)

	';'  shift 50
	.  error


state 22
	statement : "exit" "when" . bool expr  (24)

	bool  shift 51
	.  error


state 23
	statement : "if" bool . expr "then" state decls end_if  (25)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 52
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 24
	pStateDeclSeq : statement ';' . pStateDeclSeq  (3)
	pStateDeclSeq : .  (2)

	Ident  shift 1
	"var"  shift 2
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	$end  reduce 2
	"end"  reduce 2

	pStateDeclSeq  goto 53
	statement  goto 10
	ref  goto 11


state 25
	statement : ref ":=" . expr  (19)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 54
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 26
	ref : Ident '.' Ident .  (27)

	.  reduce 27


state 27
	idlist : Ident ',' . idlist  (6)

	Ident  shift 13
	.  error

	idlist  goto 55


state 28
	pStateDeclSeq : "var" idlist ':' . type ';' pStateDeclSeq  (4)

	"int"  shift 56
	"real"  shift 57
	"boolean"  shift 58
	"record"  shift 59
	.  error

	type  goto 60


state 29
	basic : IntConst .  (57)

	.  reduce 57


state 30
	basic : RealConst .  (58)

	.  reduce 58


state 31
	factor : '-' . basic  (53)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'('  shift 34
	.  error

	ref  goto 35
	basic  goto 61


state 32
	factor : '+' . basic  (52)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'('  shift 34
	.  error

	ref  goto 35
	basic  goto 62


state 33
	not_expr : "not" . not_expr  (35)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	not_expr  goto 63
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 34
	basic : '(' . expr ')'  (56)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 64
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 35
	basic : ref .  (55)

	.  reduce 55


state 36
	statement : "assert" bool expr .  (20)
	expr : expr . "or" and_expr  (31)

	"or"  shift 65
	';'  reduce 20


state 37
	expr : and_expr .  (32)
	and_expr : and_expr . "and" not_expr  (33)

	"and"  shift 66
	';'  reduce 32
	"then"  reduce 32
	"or"  reduce 32
	')'  reduce 32


state 38
	and_expr : not_expr .  (34)

	.  reduce 34


state 39
	not_expr : rel_expr .  (36)
	rel_expr : rel_expr . '=' sum  (38)
	rel_expr : rel_expr . "not=" sum  (39)
	rel_expr : rel_expr . '<' sum  (40)
	rel_expr : rel_expr . "<=" sum  (41)
	rel_expr : rel_expr . '>' sum  (42)
	rel_expr : rel_expr . ">=" sum  (43)

	"not="  shift 67
	'='  shift 68
	'<'  shift 69
	"<="  shift 70
	'>'  shift 71
	">="  shift 72
	';'  reduce 36
	"then"  reduce 36
	"or"  reduce 36
	"and"  reduce 36
	')'  reduce 36


state 40
	rel_expr : sum .  (37)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 37
	';'  reduce 37
	"then"  reduce 37
	"or"  reduce 37
	"and"  reduce 37
	'='  reduce 37
	'<'  reduce 37
	"<="  reduce 37
	'>'  reduce 37
	">="  reduce 37
	')'  reduce 37


state 41
	sum : prod .  (44)
	prod : prod . '*' factor  (48)
	prod : prod . '/' factor  (49)
	prod : prod . "div" factor  (50)
	prod : prod . "mod" factor  (51)

	'*'  shift 75
	'/'  shift 76
	"div"  shift 77
	"mod"  shift 78
	'-'  reduce 44
	'+'  reduce 44
	"not="  reduce 44
	';'  reduce 44
	"then"  reduce 44
	"or"  reduce 44
	"and"  reduce 44
	'='  reduce 44
	'<'  reduce 44
	"<="  reduce 44
	'>'  reduce 44
	">="  reduce 44
	')'  reduce 44


state 42
	prod : factor .  (47)

	.  reduce 47


state 43
	factor : basic .  (54)

	.  reduce 54


state 44
	statement : "begin" state decls . "end"  (21)

	"end"  shift 79
	.  error


state 45
	declaration : "var" idlist . ':' type  (16)

	':'  shift 80
	.  error


state 46
	declaration : "bind" "var" . idlist "to" ref  (18)

	Ident  shift 13
	.  error

	idlist  goto 81


state 47
	declaration : "bind" idlist . "to" ref  (17)

	"to"  shift 82
	.  error


state 48
	state_decls : statement ';' . pStateDeclSeq  (14)
	pStateDeclSeq : .  (2)

	Ident  shift 1
	"var"  shift 2
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	"end"  reduce 2

	pStateDeclSeq  goto 83
	statement  goto 10
	ref  goto 11


state 49
	statement : "loop" state_decls "end" . "loop"  (22)

	"loop"  shift 84
	.  error


state 50
	state_decls : declaration ';' . pStateDeclSeq  (15)
	pStateDeclSeq : .  (2)

	Ident  shift 1
	"var"  shift 2
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	"end"  reduce 2

	pStateDeclSeq  goto 85
	statement  goto 10
	ref  goto 11


state 51
	statement : "exit" "when" bool . expr  (24)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 86
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 52
	statement : "if" bool expr . "then" state decls end_if  (25)
	expr : expr . "or" and_expr  (31)

	"then"  shift 87
	"or"  shift 65
	.  error


state 53
	pStateDeclSeq : statement ';' pStateDeclSeq .  (3)

	.  reduce 3


state 54
	statement : ref ":=" expr .  (19)
	expr : expr . "or" and_expr  (31)

	"or"  shift 65
	';'  reduce 19


state 55
	idlist : Ident ',' idlist .  (6)

	.  reduce 6


state 56
	type : "int" .  (7)

	.  reduce 7


state 57
	type : "real" .  (8)

	.  reduce 8


state 58
	type : "boolean" .  (9)

	.  reduce 9


state 59
	type : "record" . field_list "end" "record"  (10)

	Ident  shift 13
	.  error

	idlist  goto 88
	field_list  goto 89


state 60
	pStateDeclSeq : "var" idlist ':' type . ';' pStateDeclSeq  (4)

	';'  shift 90
	.  error


state 61
	factor : '-' basic .  (53)

	.  reduce 53


state 62
	factor : '+' basic .  (52)

	.  reduce 52


state 63
	not_expr : "not" not_expr .  (35)

	.  reduce 35


state 64
	expr : expr . "or" and_expr  (31)
	basic : '(' expr . ')'  (56)

	"or"  shift 65
	')'  shift 91
	.  error


state 65
	expr : expr "or" . and_expr  (31)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	and_expr  goto 92
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 66
	and_expr : and_expr "and" . not_expr  (33)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	not_expr  goto 93
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 67
	rel_expr : rel_expr "not=" . sum  (39)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 94
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 68
	rel_expr : rel_expr '=' . sum  (38)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 95
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 69
	rel_expr : rel_expr '<' . sum  (40)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 96
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 70
	rel_expr : rel_expr "<=" . sum  (41)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 97
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 71
	rel_expr : rel_expr '>' . sum  (42)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 98
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 72
	rel_expr : rel_expr ">=" . sum  (43)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	sum  goto 99
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 73
	sum : sum '-' . prod  (46)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	prod  goto 100
	factor  goto 42
	basic  goto 43


state 74
	sum : sum '+' . prod  (45)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	prod  goto 101
	factor  goto 42
	basic  goto 43


state 75
	prod : prod '*' . factor  (48)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	factor  goto 102
	basic  goto 43


state 76
	prod : prod '/' . factor  (49)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	factor  goto 103
	basic  goto 43


state 77
	prod : prod "div" . factor  (50)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	factor  goto 104
	basic  goto 43


state 78
	prod : prod "mod" . factor  (51)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	'('  shift 34
	.  error

	ref  goto 35
	factor  goto 105
	basic  goto 43


state 79
	statement : "begin" state decls "end" .  (21)

	.  reduce 21


state 80
	declaration : "var" idlist ':' . type  (16)

	"int"  shift 56
	"real"  shift 57
	"boolean"  shift 58
	"record"  shift 59
	.  error

	type  goto 106


state 81
	declaration : "bind" "var" idlist . "to" ref  (18)

	"to"  shift 107
	.  error


state 82
	declaration : "bind" idlist "to" . ref  (17)

	Ident  shift 1
	.  error

	ref  goto 108


state 83
	state_decls : statement ';' pStateDeclSeq .  (14)

	.  reduce 14


state 84
	statement : "loop" state_decls "end" "loop" .  (22)

	.  reduce 22


state 85
	state_decls : declaration ';' pStateDeclSeq .  (15)

	.  reduce 15


state 86
	statement : "exit" "when" bool expr .  (24)
	expr : expr . "or" and_expr  (31)

	"or"  shift 65
	';'  reduce 24


state 87
	statement : "if" bool expr "then" . state decls end_if  (25)

	state  shift 109
	.  error


state 88
	field_list : idlist . ':' type  (11)
	field_list : idlist . ':' type ';' field_list  (12)

	':'  shift 110
	.  error


state 89
	type : "record" field_list . "end" "record"  (10)

	"end"  shift 111
	.  error


state 90
	pStateDeclSeq : "var" idlist ':' type ';' . pStateDeclSeq  (4)
	pStateDeclSeq : .  (2)

	Ident  shift 1
	"var"  shift 2
	"assert"  shift 3
	"begin"  shift 4
	"loop"  shift 5
	"exit"  shift 6
	"if"  shift 7
	$end  reduce 2
	"end"  reduce 2

	pStateDeclSeq  goto 112
	statement  goto 10
	ref  goto 11


state 91
	basic : '(' expr ')' .  (56)

	.  reduce 56


state 92
	expr : expr "or" and_expr .  (31)
	and_expr : and_expr . "and" not_expr  (33)

	"and"  shift 66
	';'  reduce 31
	"then"  reduce 31
	"or"  reduce 31
	')'  reduce 31


state 93
	and_expr : and_expr "and" not_expr .  (33)

	.  reduce 33


state 94
	rel_expr : rel_expr "not=" sum .  (39)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 39
	';'  reduce 39
	"then"  reduce 39
	"or"  reduce 39
	"and"  reduce 39
	'='  reduce 39
	'<'  reduce 39
	"<="  reduce 39
	'>'  reduce 39
	">="  reduce 39
	')'  reduce 39


state 95
	rel_expr : rel_expr '=' sum .  (38)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 38
	';'  reduce 38
	"then"  reduce 38
	"or"  reduce 38
	"and"  reduce 38
	'='  reduce 38
	'<'  reduce 38
	"<="  reduce 38
	'>'  reduce 38
	">="  reduce 38
	')'  reduce 38


state 96
	rel_expr : rel_expr '<' sum .  (40)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 40
	';'  reduce 40
	"then"  reduce 40
	"or"  reduce 40
	"and"  reduce 40
	'='  reduce 40
	'<'  reduce 40
	"<="  reduce 40
	'>'  reduce 40
	">="  reduce 40
	')'  reduce 40


state 97
	rel_expr : rel_expr "<=" sum .  (41)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 41
	';'  reduce 41
	"then"  reduce 41
	"or"  reduce 41
	"and"  reduce 41
	'='  reduce 41
	'<'  reduce 41
	"<="  reduce 41
	'>'  reduce 41
	">="  reduce 41
	')'  reduce 41


state 98
	rel_expr : rel_expr '>' sum .  (42)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 42
	';'  reduce 42
	"then"  reduce 42
	"or"  reduce 42
	"and"  reduce 42
	'='  reduce 42
	'<'  reduce 42
	"<="  reduce 42
	'>'  reduce 42
	">="  reduce 42
	')'  reduce 42


state 99
	rel_expr : rel_expr ">=" sum .  (43)
	sum : sum . '+' prod  (45)
	sum : sum . '-' prod  (46)

	'-'  shift 73
	'+'  shift 74
	"not="  reduce 43
	';'  reduce 43
	"then"  reduce 43
	"or"  reduce 43
	"and"  reduce 43
	'='  reduce 43
	'<'  reduce 43
	"<="  reduce 43
	'>'  reduce 43
	">="  reduce 43
	')'  reduce 43


state 100
	sum : sum '-' prod .  (46)
	prod : prod . '*' factor  (48)
	prod : prod . '/' factor  (49)
	prod : prod . "div" factor  (50)
	prod : prod . "mod" factor  (51)

	'*'  shift 75
	'/'  shift 76
	"div"  shift 77
	"mod"  shift 78
	'-'  reduce 46
	'+'  reduce 46
	"not="  reduce 46
	';'  reduce 46
	"then"  reduce 46
	"or"  reduce 46
	"and"  reduce 46
	'='  reduce 46
	'<'  reduce 46
	"<="  reduce 46
	'>'  reduce 46
	">="  reduce 46
	')'  reduce 46


state 101
	sum : sum '+' prod .  (45)
	prod : prod . '*' factor  (48)
	prod : prod . '/' factor  (49)
	prod : prod . "div" factor  (50)
	prod : prod . "mod" factor  (51)

	'*'  shift 75
	'/'  shift 76
	"div"  shift 77
	"mod"  shift 78
	'-'  reduce 45
	'+'  reduce 45
	"not="  reduce 45
	';'  reduce 45
	"then"  reduce 45
	"or"  reduce 45
	"and"  reduce 45
	'='  reduce 45
	'<'  reduce 45
	"<="  reduce 45
	'>'  reduce 45
	">="  reduce 45
	')'  reduce 45


state 102
	prod : prod '*' factor .  (48)

	.  reduce 48


state 103
	prod : prod '/' factor .  (49)

	.  reduce 49


state 104
	prod : prod "div" factor .  (50)

	.  reduce 50


state 105
	prod : prod "mod" factor .  (51)

	.  reduce 51


state 106
	declaration : "var" idlist ':' type .  (16)

	.  reduce 16


state 107
	declaration : "bind" "var" idlist "to" . ref  (18)

	Ident  shift 1
	.  error

	ref  goto 113


state 108
	declaration : "bind" idlist "to" ref .  (17)

	.  reduce 17


state 109
	statement : "if" bool expr "then" state . decls end_if  (25)

	decls  shift 114
	.  error


state 110
	field_list : idlist ':' . type  (11)
	field_list : idlist ':' . type ';' field_list  (12)

	"int"  shift 56
	"real"  shift 57
	"boolean"  shift 58
	"record"  shift 59
	.  error

	type  goto 115


state 111
	type : "record" field_list "end" . "record"  (10)

	"record"  shift 116
	.  error


state 112
	pStateDeclSeq : "var" idlist ':' type ';' pStateDeclSeq .  (4)

	.  reduce 4


state 113
	declaration : "bind" "var" idlist "to" ref .  (18)

	.  reduce 18


state 114
	statement : "if" bool expr "then" state decls . end_if  (25)

	"end"  shift 117
	"else"  shift 118
	"elsif"  shift 119
	.  error

	end_if  goto 120


state 115
	field_list : idlist ':' type .  (11)
	field_list : idlist ':' type . ';' field_list  (12)

	';'  shift 121
	"end"  reduce 11


state 116
	type : "record" field_list "end" "record" .  (10)

	.  reduce 10


state 117
	end_if : "end" . "if"  (28)

	"if"  shift 122
	.  error


state 118
	end_if : "else" . state decls "end" "if"  (29)

	state  shift 123
	.  error


state 119
	end_if : "elsif" . bool expr "then" state decls end_if  (30)

	bool  shift 124
	.  error


state 120
	statement : "if" bool expr "then" state decls end_if .  (25)

	.  reduce 25


state 121
	field_list : idlist ':' type ';' . field_list  (12)

	Ident  shift 13
	.  error

	idlist  goto 88
	field_list  goto 125


state 122
	end_if : "end" "if" .  (28)

	.  reduce 28


state 123
	end_if : "else" state . decls "end" "if"  (29)

	decls  shift 126
	.  error


state 124
	end_if : "elsif" bool . expr "then" state decls end_if  (30)

	Ident  shift 1
	IntConst  shift 29
	RealConst  shift 30
	'-'  shift 31
	'+'  shift 32
	"not"  shift 33
	'('  shift 34
	.  error

	ref  goto 35
	expr  goto 127
	and_expr  goto 37
	not_expr  goto 38
	rel_expr  goto 39
	sum  goto 40
	prod  goto 41
	factor  goto 42
	basic  goto 43


state 125
	field_list : idlist ':' type ';' field_list .  (12)

	.  reduce 12


state 126
	end_if : "else" state decls . "end" "if"  (29)

	"end"  shift 128
	.  error


state 127
	end_if : "elsif" bool expr . "then" state decls end_if  (30)
	expr : expr . "or" and_expr  (31)

	"then"  shift 129
	"or"  shift 65
	.  error


state 128
	end_if : "else" state decls "end" . "if"  (29)

	"if"  shift 130
	.  error


state 129
	end_if : "elsif" bool expr "then" . state decls end_if  (30)

	state  shift 131
	.  error


state 130
	end_if : "else" state decls "end" "if" .  (29)

	.  reduce 29


state 131
	end_if : "elsif" bool expr "then" state . decls end_if  (30)

	decls  shift 132
	.  error


state 132
	end_if : "elsif" bool expr "then" state decls . end_if  (30)

	"end"  shift 117
	"else"  shift 118
	"elsif"  shift 119
	.  error

	end_if  goto 133


state 133
	end_if : "elsif" bool expr "then" state decls end_if .  (30)

	.  reduce 30


52 terminals, 19 nonterminals
59 grammar rules, 134 states
